creation of create, delete and update endpoints + exceptions treatment
